[package]
name = "encapsulate-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-identity = "0.4"
actix-web = "4.0"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
diesel = { version = "1.4", features = ["postgres", "uuidv07", "r2d2", "chrono"] }
diesel_migrations = "1.4.0"
log = { version = "0.4", features = ["max_level_trace", "release_max_level_warn", "std", "serde"] }
rust-argon2 = "1"
derive_more = "0.99.5"